# multi-service-backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/routes/: __init__.py  agendamentos.py  auth.py  cart.py  catalog.py  checkout.py  clientes.py  dashboard.py  merchants.py  prestadores.py  roles.py  tenants.py
app/core/: config.py  database.py  deps.py  security.py
app/domain/: enums.py
app/infrastructure/db/: __init__.py  base_class.py  models.py  types.py
app/infrastructure/migrations/: env.py  script.py.mako
app/infrastructure/migrations/versions/: 20240603001_initial.py  28a839dca61f_add_table_role.py  a8af7603f2be_atualizacao_do_marchant.py  b78512723ba8_descricao.py
app/infrastructure/repositories/: base.py
app/schemas/: agendamento.py  auth.py  cart.py  checkout.py  cliente.py  common.py  dashboard.py  merchant.py  pedido.py  role.py  tenant.py
app/services/: agendamento_service.py  checkout_service.py  tenant_service.py
docs/: API_CALLS.md  ARCHITECTURE.md  DOCUMENTACAO_PT.md
scripts/: seed_data.py
tests/: conftest.py  test_agendamentos.py  test_auth.py  test_checkout.py  test_dashboard.py  test_merchants.py  test_tenant_service.py
